feat: add google contact feature

--- a/backend/views/googleAuth.ejs
+++ b/backend/views/googleAuth.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>This is Google Auth Tutorial</h1>
-    <a href="http://localhost:1010/api/auth/google">Sign in with google</a>
+    <a href="http://localhost:1010/api/auth/google/contact">Sign in with google</a>
 </body>
 </html>
