--- a/frontend/src/components/AuthBackground/AuthBackground.css
+++ b/frontend/src/components/AuthBackground/AuthBackground.css
@@ -1,5 +1,5 @@
 .background-image{
-    background-image: url('../../../src/assets/bg9.jpg') ;
+    background-image: url('../../../src/images/bg9.jpg') ;
     background-size: 100vw auto;
     opacity: 0.9;
 }
